Added method fillData(). Its onlyyyy for you. Makes it easier.